[package]
name = "bfjit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
dynasm = "2.0.0"
dynasmrt = "2.0.0"
proc-macro2 = "1.0.66"
thiserror = "1.0.44"
